Make stamps use tabular numbers to avoid layout shifts

--- a/Stamp.css
+++ b/Stamp.css
@@ -1,4 +1,8 @@
 [class^="Stamp"] {
   color: gray;
   cursor: default;
+
+  span {
+    font-variant-numeric: tabular-nums;
+  }
 }
